Update gpu operator and related scripts with latest fork; update GpuAdapter resource scope

--- a/config/assets/gpu-operator/state-mig-manager/0400_configmap.yaml
+++ b/config/assets/gpu-operator/state-mig-manager/0400_configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mig-parted-config
+  name: default-mig-parted-config
   namespace: gpu-operator-resources
 data:
   config.yaml: |
