--- a/config/samples/_v1beta1_gpupolicyadapter-vgpu.yaml
+++ b/config/samples/_v1beta1_gpupolicyadapter-vgpu.yaml
@@ -4,7 +4,10 @@ metadata:
   name: vgpu
 spec:
   images:
-    driver:
+    driver: cr.lan.kralicky.dev/nvidia-vgpu-driver:latest
   vgpu:
     licenseConfigMap: licensing-config
     licenseServerKind: nls
+  template:
+    toolkit:
+      imagePullPolicy: Always
