--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -11520,7 +11520,6 @@ spec:
                     type: integer
                   image:
                     description: DCGM image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -11708,8 +11707,6 @@ spec:
                   version:
                     description: DCGM image tag
                     type: string
-                required:
-                - image
                 type: object
               dcgmExporter:
                 description: DCGMExporter spec
@@ -11839,7 +11836,6 @@ spec:
                     type: array
                   image:
                     description: DCGM image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -12027,8 +12023,6 @@ spec:
                   version:
                     description: DCGM image tag
                     type: string
-                required:
-                - image
                 type: object
               devicePlugin:
                 description: DevicePlugin component spec
@@ -12149,7 +12143,6 @@ spec:
                     type: array
                   image:
                     description: DevicePlugin image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -12337,8 +12330,6 @@ spec:
                   version:
                     description: DevicePlugin image tag
                     type: string
-                required:
-                - image
                 type: object
               driver:
                 description: Driver component spec
@@ -12463,7 +12454,6 @@ spec:
                     type: array
                   image:
                     description: Driver image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -12601,7 +12591,7 @@ spec:
                         type: array
                       image:
                         description: Image represents Driver-Manager image name
-                        pattern: '[a-zA-Z0-9\-]+'
+                        pattern: '[a-zA-Z0-9\-]*'
                         type: string
                       imagePullPolicy:
                         description: Image pull policy
@@ -12823,8 +12813,6 @@ spec:
                           daemon configuration file nvidia-topologyd.conf'
                         type: string
                     type: object
-                required:
-                - image
                 type: object
               gfd:
                 description: GPUFeatureDiscovery spec
@@ -12945,7 +12933,6 @@ spec:
                     type: array
                   image:
                     description: GFD image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -13133,13 +13120,12 @@ spec:
                   version:
                     description: GFD image tag
                     type: string
-                required:
-                - image
                 type: object
               mig:
                 description: MIG spec
                 properties:
                   strategy:
+                    default: none
                     description: 'Optional: MIGStrategy to apply for GFD and Device-Plugin'
                     enum:
                     - none
@@ -13155,6 +13141,14 @@ spec:
                     items:
                       type: string
                     type: array
+                  config:
+                    description: 'Optional: Custom mig-parted configuration for MIG
+                      Manager container'
+                    properties:
+                      name:
+                        description: ConfigMap name
+                        type: string
+                    type: object
                   enabled:
                     description: Enabled indicates if deployment of mig-manager is
                       enabled
@@ -13270,7 +13264,6 @@ spec:
                     type: array
                   image:
                     description: mig-manager image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -13458,8 +13451,6 @@ spec:
                   version:
                     description: mig-manager image tag
                     type: string
-                required:
-                - image
                 type: object
               nodeStatusExporter:
                 description: NodeStatusExporter spec
@@ -13584,7 +13575,6 @@ spec:
                     type: array
                   image:
                     description: node-status-exporter image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -13772,8 +13762,6 @@ spec:
                   version:
                     description: node-status-exporter image tag
                     type: string
-                required:
-                - image
                 type: object
               operator:
                 description: Operator component spec
@@ -13792,7 +13780,6 @@ spec:
                     properties:
                       image:
                         description: Image represents image name
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         description: Image pull policy
@@ -13812,8 +13799,11 @@ spec:
                   runtimeClass:
                     default: nvidia
                     type: string
-                required:
-                - defaultRuntime
+                  runtimeHandler:
+                    description: 'Optional: the handler to use for the specified RuntimeClass.
+                      If unset, it will use ''docker'' if DefaultRuntime is ''docker'',
+                      otherwise it will use the value of RuntimeClass.'
+                    type: string
                 type: object
               psp:
                 description: PSP defines spec for handling PodSecurityPolicies
@@ -13946,7 +13936,6 @@ spec:
                     type: array
                   image:
                     description: Toolkit image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -14134,8 +14123,6 @@ spec:
                   version:
                     description: Toolkit image tag
                     type: string
-                required:
-                - image
                 type: object
               validator:
                 description: Validator defines the spec for operator-validator daemonset
@@ -14490,7 +14477,6 @@ spec:
                     type: array
                   image:
                     description: Validator image name
-                    pattern: '[a-zA-Z0-9\-]+'
                     type: string
                   imagePullPolicy:
                     description: Image pull policy
@@ -14912,19 +14898,7 @@ spec:
                   version:
                     description: Validator image tag
                     type: string
-                required:
-                - image
                 type: object
-            required:
-            - daemonsets
-            - dcgm
-            - dcgmExporter
-            - devicePlugin
-            - driver
-            - gfd
-            - nodeStatusExporter
-            - operator
-            - toolkit
             type: object
           status:
             description: ClusterPolicyStatus defines the observed state of ClusterPolicy
@@ -14936,8 +14910,6 @@ spec:
                 - ready
                 - notReady
                 type: string
-            required:
-            - state
             type: object
         type: object
     served: true
@@ -16446,7 +16418,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: gpupolicyadapters.opni.io
 spec:
@@ -16456,7 +16428,7 @@ spec:
     listKind: GpuPolicyAdapterList
     plural: gpupolicyadapters
     singular: gpupolicyadapter
-  scope: Namespaced
+  scope: Cluster
   versions:
   - name: v1beta1
     schema:
@@ -16604,7 +16576,6 @@ spec:
                         format: int32
                         type: integer
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -16696,8 +16667,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   dcgmExporter:
                     properties:
@@ -16771,7 +16740,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -16863,8 +16831,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   devicePlugin:
                     properties:
@@ -16933,7 +16899,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17025,8 +16990,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   driver:
                     properties:
@@ -17097,7 +17060,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17175,7 +17137,7 @@ spec:
                               type: object
                             type: array
                           image:
-                            pattern: '[a-zA-Z0-9\-]+'
+                            pattern: '[a-zA-Z0-9\-]*'
                             type: string
                           imagePullPolicy:
                             type: string
@@ -17289,8 +17251,6 @@ spec:
                           config:
                             type: string
                         type: object
-                    required:
-                    - image
                     type: object
                   gfd:
                     properties:
@@ -17359,7 +17319,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17451,12 +17410,11 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   mig:
                     properties:
                       strategy:
+                        default: none
                         enum:
                         - none
                         - single
@@ -17469,6 +17427,11 @@ spec:
                         items:
                           type: string
                         type: array
+                      config:
+                        properties:
+                          name:
+                            type: string
+                        type: object
                       enabled:
                         type: boolean
                       env:
@@ -17532,7 +17495,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17624,8 +17586,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   nodeStatusExporter:
                     properties:
@@ -17696,7 +17656,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17788,8 +17747,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   operator:
                     properties:
@@ -17803,7 +17760,6 @@ spec:
                       initContainer:
                         properties:
                           image:
-                            pattern: '[a-zA-Z0-9\-]+'
                             type: string
                           imagePullPolicy:
                             type: string
@@ -17819,8 +17775,8 @@ spec:
                       runtimeClass:
                         default: nvidia
                         type: string
-                    required:
-                    - defaultRuntime
+                      runtimeHandler:
+                        type: string
                     type: object
                   psp:
                     properties:
@@ -17896,7 +17852,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -17988,8 +17943,6 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
                   validator:
                     properties:
@@ -18184,7 +18137,6 @@ spec:
                           type: object
                         type: array
                       image:
-                        pattern: '[a-zA-Z0-9\-]+'
                         type: string
                       imagePullPolicy:
                         type: string
@@ -18402,19 +18354,7 @@ spec:
                         type: object
                       version:
                         type: string
-                    required:
-                    - image
                     type: object
-                required:
-                - daemonsets
-                - dcgm
-                - dcgmExporter
-                - devicePlugin
-                - driver
-                - gfd
-                - nodeStatusExporter
-                - operator
-                - toolkit
                 type: object
               vgpu:
                 properties:
@@ -18446,7 +18386,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   name: logadapters.opni.io
 spec:
   conversion:
@@ -40674,7 +40614,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   name: opniclusters.opni.io
 spec:
   conversion:
@@ -43124,7 +43064,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: opnidemoes.demo.opni.io
 spec:
@@ -53090,7 +53030,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: pretrainedmodels.opni.io
 spec:
