code cleanup; add api field comments; start feature gates implementation

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -85,12 +85,15 @@ spec:
                       enabled:
                         type: boolean
                       request:
-                        type: string
+                        anyOf:
+                        - type: integer
+                        - type: string
+                        pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                        x-kubernetes-int-or-string: true
                       storageClass:
                         type: string
                     type: object
                   version:
-                    default: latest
                     type: string
                   workloads:
                     properties:
@@ -1720,8 +1723,6 @@ spec:
                     - username
                     - nkey
                     type: string
-                  natsURL:
-                    type: string
                   nodeSelector:
                     additionalProperties:
                       type: string
@@ -1758,6 +1759,8 @@ spec:
                     type: array
                   username:
                     type: string
+                required:
+                - authMethod
                 type: object
               nulogHyperparameters:
                 additionalProperties:
@@ -1796,7 +1799,11 @@ spec:
                           enabled:
                             type: boolean
                           request:
-                            type: string
+                            anyOf:
+                            - type: integer
+                            - type: string
+                            pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                            x-kubernetes-int-or-string: true
                           storageClass:
                             type: string
                         type: object
