--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -16418,7 +16418,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: gpupolicyadapters.opni.io
 spec:
@@ -18386,7 +18386,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.5.0
   name: logadapters.opni.io
 spec:
   conversion:
@@ -40614,7 +40614,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.5.0
   name: opniclusters.opni.io
 spec:
   conversion:
@@ -43071,7 +43071,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: opnidemoes.demo.opni.io
 spec:
@@ -53037,7 +53037,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: (devel)
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: pretrainedmodels.opni.io
 spec:
