Add implementation logic for gpu adapter

--- a/config/crd/bases/opni.io_gpupolicyadapters.yaml
+++ b/config/crd/bases/opni.io_gpupolicyadapters.yaml
@@ -34,6 +34,7 @@ spec:
                 - auto
                 - docker
                 - containerd
+                - crio
                 type: string
               images:
                 properties:
