--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -16448,6 +16448,7 @@ spec:
                 - auto
                 - docker
                 - containerd
+                - crio
                 type: string
               images:
                 properties:
