--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -16418,7 +16418,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: gpupolicyadapters.opni.io
 spec:
@@ -18387,7 +18387,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   name: logadapters.opni.io
 spec:
   conversion:
@@ -40615,7 +40615,7 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     cert-manager.io/inject-ca-from: opni-system/opni-serving-cert
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   name: opniclusters.opni.io
 spec:
   conversion:
@@ -42697,7 +42697,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: opnidemoes.demo.opni.io
 spec:
@@ -52663,7 +52663,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.5.0
+    controller-gen.kubebuilder.io/version: (devel)
   creationTimestamp: null
   name: pretrainedmodels.opni.io
 spec:
