--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,18 +1,17 @@
 FROM golang:1.17
 
-RUN go get sigs.k8s.io/kustomize/kustomize/v4@v4.1.3 \
-  && go get sigs.k8s.io/kubebuilder/v3/cmd@v3.1.0 \
-  && go get sigs.k8s.io/controller-tools/cmd/controller-gen@v0.5.0
-
-RUN curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.38.0;
-
 ENV DOCKER_VERSION=20.10.5
 
-RUN curl -sL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz -o docker-${DOCKER_VERSION}.tgz && \
-  tar -zxvf docker-${DOCKER_VERSION}.tgz -C /usr/bin docker/docker --strip-components 1 && \
-  chmod +x /usr/bin/docker
-
-RUN mv /go/bin/* /usr/bin/ \
+RUN go get sigs.k8s.io/kustomize/kustomize/v4@v4.1.3 \
+  && go get sigs.k8s.io/kubebuilder/v3/cmd@v3.1.0 \
+  && go get sigs.k8s.io/controller-tools/cmd/controller-gen@v0.5.0 \
+  && curl -sL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.38.0 \
+  && apt update \
+  && apt -y install jq \
+  && curl -sL https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz -o docker-${DOCKER_VERSION}.tgz \
+  && tar -zxvf docker-${DOCKER_VERSION}.tgz -C /usr/bin docker/docker --strip-components 1 \
+  && chmod +x /usr/bin/docker \
+  && mv /go/bin/* /usr/bin/ \
   && rm -rf /go/bin/* \
   && go clean -cache -modcache
 
