--- a/images/python/requirements.txt
+++ b/images/python/requirements.txt
@@ -9,6 +9,9 @@ kubernetes==12.0.1
 numpy==1.20.3
 opni-nats==0.0.0.4
 pandas==1.2.3
+prometheus_api_client==0.4.2
+ruptures==1.1.4
 scikit_learn==0.24.1
 schedule==1.1.0
+statsmodels==0.12.2
 uvicorn==0.13.4
