Switch e2e to use tilt

--- a/.drone.yml
+++ b/.drone.yml
@@ -222,13 +222,15 @@ platform:
   arch: amd64
 steps:
   - name: e2e-test
-    image: golang:1.17
+    image: quay.io/dbason/tilt:go1.17-0.22.9
     commands:
       - until test -f ./kubeconfig.yaml; do sleep 1s; done
       - cat /etc/resolv.conf
       - export KUBECONFIG=$(realpath kubeconfig.yaml)
-      - export E2E_USE_EXISTING=1
       - scripts/e2e
+    volumes:
+      - name: docker
+        path: /var/run/docker.sock
     when:
       event:
         - pull_request
