--- a/hack/k3d-drone.yaml
+++ b/hack/k3d-drone.yaml
@@ -2,6 +2,8 @@ apiVersion: k3d.io/v1alpha2
 kind: Simple
 name: drone
 servers: 1
+volumes:
+  - volume: /etc/os-release:/etc/os-release
 options:
   k3s:
     extraServerArgs:
