production api updates for cli work in progress

--- a/config/assets/nfd/master/0400_master_daemonset.yaml
+++ b/config/assets/nfd/master/0400_master_daemonset.yaml
@@ -14,32 +14,29 @@ spec:
         app: nfd-master
     spec:
       affinity:
-        requiredDuringSchedulingIgnoredDuringExecution:
-          nodeSelectorTerms:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
             - matchExpressions:
-                - key: node-role.kubernetes.io
-                  operator: In
-                  values:
-                    - master
-                    - controlplane
-                    - control-plane
+              - key: node-role.kubernetes.io/master
+                operator: Exists
       serviceAccount: nfd-master
       tolerations:
-        - key: "node-role.kubernetes.io/master"
-          operator: "Equal"
-          value: ""
-          effect: "NoSchedule"
+      - key: "node-role.kubernetes.io/master"
+        operator: "Equal"
+        value: ""
+        effect: "NoSchedule"
       containers:
-        - env:
-            - name: NODE_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: spec.nodeName
-          image: $(NODE_FEATURE_DISCOVERY_IMAGE)
-          name: nfd-master
-          command: ["nfd-master"]
-          securityContext:
-            readOnlyRootFilesystem: true
-            allowPrivilegeEscalation: false
-            capabilities:
-              drop: ["ALL"]
+      - env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        image: $(NODE_FEATURE_DISCOVERY_IMAGE)
+        name: nfd-master
+        command: ["nfd-master"]
+        securityContext:
+          readOnlyRootFilesystem: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop: ["ALL"]
