--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -21393,13 +21393,13 @@ spec:
                 type: object
               provider:
                 enum:
-                - AKS
-                - EKS
-                - GKE
-                - K3S
-                - RKE
-                - RKE2
-                - KubeAudit
+                - aks
+                - eks
+                - gke
+                - k3s
+                - rke
+                - rke2
+                - kubeaudit
                 type: string
               rke:
                 properties:
