--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -11,15 +11,18 @@ metadata:
   name: controller-manager
   namespace: system
   labels:
+    app: opni-controller-manager
     control-plane: controller-manager
 spec:
   selector:
     matchLabels:
+      app: opni-controller-manager
       control-plane: controller-manager
   replicas: 1
   template:
     metadata:
       labels:
+        app: opni-controller-manager
         control-plane: controller-manager
     spec:
       containers:
