--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -53149,6 +53149,7 @@ rules:
   - opni.io
   resources:
   - logadapters
+  - opniclusters
   verbs:
   - create
   - delete
@@ -53160,13 +53161,15 @@ rules:
 - apiGroups:
   - opni.io
   resources:
-  - logadapters/finalizers
+  - logadapters
+  - opniclusters/finalizers
   verbs:
   - update
 - apiGroups:
   - opni.io
   resources:
-  - logadapters/status
+  - logadapters
+  - opniclusters/status
   verbs:
   - get
   - patch
