--- a/deploy/manifests/00_crds.yaml
+++ b/deploy/manifests/00_crds.yaml
@@ -41677,13 +41677,12 @@ spec:
                 type: object
               provider:
                 enum:
-                - AKS
-                - EKS
-                - GKE
-                - K3S
-                - RKE
-                - RKE2
-                - KubeAudit
+                - aks
+                - eks
+                - gke
+                - k3s
+                - rke
+                - rke2
                 type: string
               rke:
                 properties:
