Generate new CRDs

--- a/config/crd/bases/opni.io_opniclusters.yaml
+++ b/config/crd/bases/opni.io_opniclusters.yaml
@@ -1868,6 +1868,8 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      runtimeClass:
+                        type: string
                       tolerations:
                         items:
                           properties:
