--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -42487,6 +42487,8 @@ spec:
                         additionalProperties:
                           type: string
                         type: object
+                      runtimeClass:
+                        type: string
                       tolerations:
                         items:
                           properties:
