Add fixes for gpu operator

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -2,5 +2,6 @@ FROM registry.opensuse.org/devel/bci/images/bci/minimal:latest
 
 WORKDIR /
 COPY manager .
+COPY ./assets/gpu-operator /opt/gpu-operator/
 
 ENTRYPOINT ["/manager"]
