--- a/.gitignore
+++ b/.gitignore
@@ -16,5 +16,6 @@ dist/
 build/
 package/*
 !package/assets/
-
 /.dapper
+config/samples/_v1beta1_gpupolicyadapter-vgpu.yaml
+deploy/examples/gpu/vgpu.yaml
