--- a/deploy/examples/logAdapters/logAdapter_k3s_openrc.yaml
+++ b/deploy/examples/logAdapters/logAdapter_k3s_openrc.yaml
@@ -1,11 +1,8 @@
 apiVersion: opni.io/v1beta1
 kind: LogAdapter
 metadata:
-  name: k3s-openrc
+  name: lga
 spec:
   provider: k3s
   k3s:
     containerEngine: openrc
-  opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
