--- a/deploy/examples/logAdapters/logAdapter_rke.yaml
+++ b/deploy/examples/logAdapters/logAdapter_rke.yaml
@@ -1,9 +1,6 @@
 apiVersion: opni.io/v1beta1
 kind: LogAdapter
 metadata:
-  name: rke
+  name: lga
 spec:
   provider: rke
-  opniCluster:
-    name: opni-cluster
-    namespace: opni-cluster
