--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -40660,6 +40660,17 @@ spec:
                 type: boolean
               elastic:
                 properties:
+                  adminPasswordFrom:
+                    properties:
+                      key:
+                        type: string
+                      name:
+                        type: string
+                      optional:
+                        type: boolean
+                    required:
+                    - key
+                    type: object
                   configSecret:
                     properties:
                       name:
@@ -42668,7 +42679,7 @@ spec:
             properties:
               auth:
                 properties:
-                  authSecretKeyRef:
+                  elasticsearchAuthSecretKeyRef:
                     properties:
                       key:
                         type: string
@@ -42681,6 +42692,17 @@ spec:
                     type: object
                   nKeyUser:
                     type: string
+                  natsAuthSecretKeyRef:
+                    properties:
+                      key:
+                        type: string
+                      name:
+                        type: string
+                      optional:
+                        type: boolean
+                    required:
+                    - key
+                    type: object
                   s3AccessKey:
                     properties:
                       key:
