--- a/staging/staging_autogen.yaml
+++ b/staging/staging_autogen.yaml
@@ -42690,6 +42690,8 @@ spec:
                     required:
                     - key
                     type: object
+                  generateElasticsearchHash:
+                    type: boolean
                   nKeyUser:
                     type: string
                   natsAuthSecretKeyRef:
