--- a/deploy/manifests/00_crds.yaml
+++ b/deploy/manifests/00_crds.yaml
@@ -44723,6 +44723,17 @@ spec:
                 type: boolean
               elastic:
                 properties:
+                  adminPasswordFrom:
+                    properties:
+                      key:
+                        type: string
+                      name:
+                        type: string
+                      optional:
+                        type: boolean
+                    required:
+                    - key
+                    type: object
                   configSecret:
                     properties:
                       name:
@@ -46731,7 +46742,7 @@ spec:
             properties:
               auth:
                 properties:
-                  authSecretKeyRef:
+                  elasticsearchAuthSecretKeyRef:
                     properties:
                       key:
                         type: string
@@ -46742,8 +46753,21 @@ spec:
                     required:
                     - key
                     type: object
+                  generateElasticsearchHash:
+                    type: boolean
                   nKeyUser:
                     type: string
+                  natsAuthSecretKeyRef:
+                    properties:
+                      key:
+                        type: string
+                      name:
+                        type: string
+                      optional:
+                        type: boolean
+                    required:
+                    - key
+                    type: object
                   s3AccessKey:
                     properties:
                       key:
